<resources>
    <string name="app_name" translatable="false">SanTour</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="google_maps_key" translatable="false">AIzaSyArpGeA_rmBS_k7zYJhNoXQPODdM2wLpVk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home_no_track_recording">No track currently recording</string>
    <string name="track_no_name_msg">Please insert a track name</string>
    <string name="pod_no_name_msg">Please insert a POD name</string>
    <string name="pod_no_image_msg">Please insert an image for the POD</string>
    <string name="poi_no_name_msg">Please insert a POI name</string>
    <string name="poi_no_image_msg">Please insert an image for the POI</string>
    <string name="track_no_name_title">no track name</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main3" translatable="false">MainActivity3</string>
    <string name="track_name">Track name</string>
    <string name="create_track">Create track</string>
    <string name="create_poi">Create POI</string>
    <string name="update_poi">Update POI</string>
    <string name="pod_details">Details POD</string>
    <string name="pod_added">POD added</string>
    <string name="poi_added">POI added</string>
    <string name="poi_pod_list">POI-POD List</string>
    <string name="track_current_location">Your current location</string>
    <string name="track_created">Track created !</string>
    <string name="create_pod">Create POD</string>
    <string name="update_pod">Update POD</string>
    <string name="pod_name">POD name</string>
    <string name="poi_name">POI name</string>
    <string name="name">Name</string>
    <string name="km" translatable="false">KM</string>
    <string name="poi" translatable="false">POI</string>
    <string name="pod" translatable="false">POD</string>
    <string name="longi">Long.</string>
    <string name="lati">Lat.</string>
    <string name="description">Description</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="ok" translatable="false">OK</string>
    <string name="next">NEXT</string>
    <string name="vertical">Verticality</string>
    <string name="rocks">Rocks</string>
    <string name="slope">Slope</string>
    <string name="aboutText">This 645-2 project proposes to develop an android application providing specific interfaces for collecting the GPS points of an itinerary while on the way as well as allowing the user to collect Points of Interests (POI) and Points of Difficulty (POD) with specific categorization. Those points may be linked to a picture and have a description and name.</string>
    <string name="copyright" translatable="false">Copyright ©2017 SanTour</string>
    <string name="psw">Password</string>
    <string name="login">Login</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="about">About</string>
    <string name="title_activity_navigation" translatable="false">NavigationActivity</string>
    <string name="msp_info_title">current location</string>
    <string name="map_info_snippet">this is your location</string>
    <string name="pick_place">Pick your place</string>
    <string name="pod_no_description_msg">Please insert a POD description</string>
    <string name="poi_no_description_msg">Please insert a POI description</string>
    <string name="user">User</string>
    <string name="settings">GPS Settings</string>
    <string name="syncro">GPS synchronization delay</string>
    <string name="low">Low (10km)</string>
    <string name="middle">Middle (100m)</string>
    <string name="high">High (5m)</string>
    <string name="precision">Precision of the localisation</string>
    <string name="poi_updated">POI updated</string>
    <string name="pod_updated">POD Updated</string>
    <string name="track_no_gps_msg">Please enable your GPS</string>
    <string name="permission_denied">permission denied</string>
    <string name="battery_warning">A higher precision or a lower synchronization rate can affect the battery negatively</string>

</resources>
