<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.hes.santour.UpdatePodFragment">

    <EditText
        android:id="@+id/et_pod_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:hint="@string/pod_name"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/textTitle"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearlayout_create_pod1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_pod_name"
        android:orientation="horizontal"
        android:weightSum="1">


        <ImageButton
            android:id="@+id/ib_pod_take_picture"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_below="@+id/et_pod_name"
            android:layout_weight="1"
            android:background="@color/img"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_photo_camera" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearlayout_create_pod2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_create_pod1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_pod_gps_data_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/longi"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_pod_gps_data_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/lati"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_create_pod_description"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/linearlayout_create_pod2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/et_pod_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="30"
            android:gravity="left|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:textColor="@color/textColor"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_create_pod3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearlayout_create_pod_description"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="bottom"
        android:weightSum="2">

        <Button
            android:id="@+id/bt_pod_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/bt_pod_next"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@color/buttonNav"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>


</RelativeLayout>
