<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.hes.santour.HomeFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:scaleType="fitXY"
        android:src="@drawable/mountain"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearlayout_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:weightSum="5">

        <Button
            android:id="@+id/createTrack"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/create_track"
            android:textColor="@color/white"
            android:textSize="15dp" />


        <Button
            android:id="@+id/POIPODList"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/poi_pod_list"
            android:textColor="@color/white"
            android:textSize="15dp"

            />

        <Button
            android:id="@+id/about"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/bt_settings"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>


</RelativeLayout>
