<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.hes.santour.SettingsFragment">


    <LinearLayout
        android:id="@+id/linearlayout_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/linearlayout_settings_precision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearlayout_settings"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_settings_battery_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/battery_warning"
                android:textColor="@color/textTitle"
                android:textSize="14sp"
                android:textStyle="italic"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/tv_settings_precision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/precision"
                android:textColor="@color/textTitle"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rb_group1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_precision_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_weight="1"
                    android:text="@string/low"
                    android:textColor="@color/textColor"
                    android:textSize="15dp" />

                <RadioButton
                    android:id="@+id/rb_precision_middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_weight="1"
                    android:text="@string/middle"
                    android:textColor="@color/textColor"
                    android:textSize="15dp" />

                <RadioButton
                    android:id="@+id/rb_precision_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_weight="1"
                    android:text="@string/high"
                    android:textColor="@color/textColor"
                    android:textSize="15dp" />
            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearlayout_settings_syncro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearlayout_settings_precision"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_settings_syncro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/syncro"
                android:textColor="@color/textTitle"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rb_group2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_syncro_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_weight="1"
                    android:text="5 s"
                    android:textColor="@color/textColor"
                    android:textSize="15dp" />

                <RadioButton
                    android:id="@+id/rb_syncro_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_weight="1"
                    android:text="10s"
                    android:textColor="@color/textColor"
                    android:textSize="15dp" />

                <RadioButton
                    android:id="@+id/rb_syncro_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_weight="1"
                    android:text="15s"
                    android:textColor="@color/textColor"
                    android:textSize="15dp" />
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_settings_syncro2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/linearlayout_settings_syncro"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="bottom"
            android:weightSum="1">


            <Button
                android:id="@+id/bt_save"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/buttonNav"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
