<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.hes.santour.DetailsPodFragment">

    <LinearLayout
        android:id="@+id/linearlayout_details1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:weightSum="3"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/linearlayout_details_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/cb_pod_delais_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/vertical"
                android:textColor="@color/textColor"
                android:textSize="25dp" />

            <SeekBar
                android:id="@+id/sb_pod_details_vertical"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="100"
                android:min="1"
                android:progress="0"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_details_rocks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/cb_pod_delais_rocks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rocks"
                android:textColor="@color/textColor"
                android:textSize="25dp" />

            <SeekBar
                android:id="@+id/sb_pod_details_rocks"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:max="100"
                android:min="1"
                android:progress="0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_details_slope"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/cb_pod_delais_slope"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/slope"
                android:textColor="@color/textColor"
                android:textSize="25dp" />

            <SeekBar
                android:id="@+id/sb_pod_details_slope"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:max="100"
                android:min="1"
                android:progress="0" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_details5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearlayout_details1"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="bottom"
        android:weightSum="2">

        <Button
            android:id="@+id/bt_pod_details_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/bt_pod_details_save"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@color/buttonNav"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

</RelativeLayout>
