<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.hes.santour.LoginFragment"
    android:background="@color/green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:weightSum="1"
        android:id="@+id/linearlayout_login1">

        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_login" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:weightSum="3"
        android:id="@+id/linearlayout_login2"
        android:layout_below="@+id/linearlayout_login1"
        android:gravity="center"


        >

        <EditText
            android:id="@+id/et_login_user"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/user"
            android:background="@color/white"
            android:layout_weight="1"
            android:textColor="@color/textColor"

            />

        <EditText
            android:id="@+id/et_login_psw"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/psw"
            android:layout_weight="1"
            android:textColor="@color/textColor"
            />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:background="@color/white"
            android:textColor="@color/green"
            style="@style/Widget.AppCompat.Button.Borderless"

            />

    </LinearLayout>




</RelativeLayout>
